Bug 168688 - Fields in table in header have wrong font size in a specific DOCX
Summary: Fields in table in header have wrong font size in a specific DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.4.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL: https://ask.libreoffice.org/t/docx-to...
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-10-04 08:26 UTC by Mike Kaganski
Modified: 2025-10-20 13:50 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Fields in table in header, having wrong size (16.40 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-10-04 08:26 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-10-04 08:26:31 UTC
Created attachment 203137 [details]
Fields in table in header, having wrong size

Ref: https://ask.libreoffice.org/t/docx-to-pdf-conversion-distorts-header-on-writer/127366/

Open the attachment.
In the header, font size of TEST must be 24, and font size of XXXXXXXXXXXXXX, A, and 2025-10-01 must be 8.
Importing to Writer, all are 12.

Was OK in v.5.4.
Comment 1 Saburo 2025-10-04 13:46:04 UTC
bibisected with linux-64-5.4
Version: 5.4.4.0.0+
Build ID: 366beabc786c004fc7ff1b2bb2f606b0ee257a95
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: x11; 
Locale: ja-JP (ja_JP.UTF-8); Calc: group

commit 366beabc786c004fc7ff1b2bb2f606b0ee257a95
author	Miklos Vajna <vmiklos@collabora.co.uk>	Tue Oct 17 09:04:33 2017 +0200
committer	Caolán McNamara <caolanm@redhat.com>	Wed Oct 18 22:10:06 2017 +0200
tree 656065b83156312eea817c37f7248254ab490b2c
parent b84cd7fb7610b0ad2c74c5a672bccc77b91a82f5 [diff]

tdf#104079 RTF import: fix handling fields inside TOC fields

The marker trick is not needed for these, but the paragraph margins are
lost when using it, so avoid it.

(cherry picked from commit 6ee33d0772f991f04e97b5b61d7b11810a1b8ac0)

Conflicts:
	writerfilter/source/dmapper/DomainMapper_Impl.cxx

Change-Id: I3fc9644cb85138b5473cb1478196ae8538041fb1
Reviewed-on: https://gerrit.libreoffice.org/43501
Comment 2 Miklos Vajna 2025-10-13 12:43:09 UTC
I'll take a look.
Comment 3 Commit Notification 2025-10-14 16:51:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/86d0a2f84d714da67d83fdba652540ebe1027382

tdf#168688 DOCX import: fix missing char props in field in header in ToC

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-10-20 13:50:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/8acfabf1f8bbb444d4fc3275a897da0aa0830e5e

tdf#168688 DOCX import: fix missing char props in field in header in ToC

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.